# BitBot-Farm

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fetch.py  live_pipeline.py  preprocesses.py  pyproject.toml  train_pipeline.py
assets/schemas/: manifest_schema.json  test_firewall.py
core/discovery_factory/: axioms.py  extractor.py  generator.py  serializer.py
core/inference_swarm/: engine.py  verifier.py
data/: logic_manifest.json  raw_blood_tests.csv
src/bitbot_farm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
