[project]
name = "bitbot-farm"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "polars",    # High-performance data processing
    "networkx",  # Essential for your Causal DAGs
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "maturin"    # Crucial for your Python-Rust bridge
]